# ipeutils

./: README.md
akmich/: README.md  pyproject.toml
akmich/examples/: example_ASD.py
akmich/src/ipeutils/akmich/: __init__.py  akmich.py
cssio/: README.md  pyproject.toml
cssio/examples/: example1.py
cssio/src/ipeutils/cssio/: __init__.py  stream2wfdisc.py
desr/: README.md  pyproject.toml
desr/examples/: restit_ssr_klucenice.py
desr/examples/data/: kluce_20260306_141008.w  kluce_20260306_141008.wfdisc  kluce_20260306_141008_deconv.mseed
desr/examples/data/Amplifikace/: Klucenice_OR01A_OR01A-ref_b30_H_ASD_SR.npz  Klucenice_OR01A_OR01A-ref_b30_Z_ASD_SR.npz  Klucenice_OR02A_OR02A-ref_b30_H_ASD_SR.npz  Klucenice_OR02A_OR02A-ref_b30_Z_ASD_SR.npz  Klucenice_OR03A_OR03A-ref_b30_H_ASD_SR.npz  Klucenice_OR03A_OR03A-ref_b30_Z_ASD_SR.npz  Klucenice_OR04A_OR04A-ref_b30_H_ASD_SR.npz  Klucenice_OR04A_OR04A-ref_b30_Z_ASD_SR.npz  Klucenice_OR05_OR05-ref_b30_H_ASD_SR.npz  Klucenice_OR05_OR05-ref_b30_Z_ASD_SR.npz  Klucenice_OR06A_OR06A-ref_b30_H_ASD_SR.npz  Klucenice_OR06A_OR06A-ref_b30_Z_ASD_SR.npz  Klucenice_OR07_OR07-ref_b30_H_ASD_SR.npz  Klucenice_OR07_OR07-ref_b30_Z_ASD_SR.npz  Klucenice_OR08_OR08-ref_b30_H_ASD_SR.npz  Klucenice_OR08_OR08-ref_b30_Z_ASD_SR.npz  Klucenice_OR09_OR09-ref_b30_H_ASD_SR.npz  Klucenice_OR09_OR09-ref_b30_Z_ASD_SR.npz  Klucenice_OR10_OR10-ref_b30_H_ASD_SR.npz  Klucenice_OR10_OR10-ref_b30_Z_ASD_SR.npz  Klucenice_OR11_OR11-ref_b30_H_ASD_SR.npz  Klucenice_OR11_OR11-ref_b30_Z_ASD_SR.npz  Klucenice_OR12_OR12-ref_b30_H_ASD_SR.npz  Klucenice_OR12_OR12-ref_b30_Z_ASD_SR.npz  Klucenice_OR13_OR13-ref_b30_H_ASD_SR.npz  Klucenice_OR13_OR13-ref_b30_Z_ASD_SR.npz  Klucenice_OR14_OR14-ref_b30_H_ASD_SR.npz  Klucenice_OR14_OR14-ref_b30_Z_ASD_SR.npz  read.txt
desr/src/ipeutils/desr/: __init__.py  site_response_rest.py
